# emotion-analysis

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: hf_spaces.yml
src/emotion_analysis/: __init__.py  __main__.py
src/emotion_analysis/app/: __init__.py  gui.py  on_callback.py
src/emotion_analysis/services/: classifier.py
src/emotion_analysis/settings/: __init__.py  hf.py  log.py  models.py  settings.py
src/emotion_analysis/utils/: __init__.py  decorators.py  setup.py
