[project]
name = "emotion-analysis-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.57.1",
    "gradio>=5.49.1",
    "librosa>=0.11.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
